# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
config("vfat-defaults") {
  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-unused-function",
    "-Wno-unused-parameter",
    "-Wno-unused-variable",
    "-D_FILE_OFFSET_BITS=64",
    "-D_GNU_SOURCE",
    "-DSIGINFO=SIGUSR2",
    "-Dnitems(x)=(sizeof((x))/sizeof((x)[0]))",
    "-Wno-implicit-function-declaration",
    "-DMAKEFS",
    "-D_MACHINE_IOCTL_FD_H_",
  ]
  include_dirs = ["//third_party/FreeBSD/sys"]
}

###################################################
##Build newfs_msdos
ohos_executable("newfs_msdos") {
  configs = [ ":vfat-defaults" ]
  sources = [
    "mkfs_msdos.c",
    "newfs_msdos.c",
  ]

  include_dirs = []

  deps = []
  subsystem_name = "storage"
  part_name = "storage_standard"
}
